Bug 521041 - Load Average graph (grid mode) does not display fractional values
Summary: Load Average graph (grid mode) does not display fractional values
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 6.6.91
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-04 10:30 UTC by zivirkari
Modified: 2026-06-11 15:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Load average graph with unhelpful number labels (10.81 KB, image/png)
2026-06-04 10:30 UTC, zivirkari
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zivirkari 2026-06-04 10:30:06 UTC
Created attachment 192867 [details]
Load average graph with unhelpful number labels

STEPS TO REPRODUCE
1. Add a system monitor widget
2. Configure Display Style: Grid and add a load average "sensor"

OBSERVED RESULT
On the side of the graph the values are numbered e.g. 0, 0, 0, 1, 1 when the system is under low load

EXPECTED RESULT
For fractional numbers to be used when graphing the load average

SOFTWARE/OS VERSIONS
Operating System (available in the Info Center app, or by running `kinfo` in a terminal window): Arch Linux
KDE Plasma Version: 6.6.91
KDE Frameworks Version: 6.26.0
Qt Version: 6.11.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2026-06-04 14:20:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/475
Comment 2 Bug Janitor Service 2026-06-09 12:49:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/477
Comment 3 Tobias Fella 2026-06-09 12:54:21 UTC
Git commit 78026f6dd65a29f2e6ac399ed5fa0d89bf5f17b6 by Tobias Fella.
Committed on 09/06/2026 at 12:49.
Pushed by tfella into branch 'Plasma/6.7'.

Fix precision for doubles passed as strings

These would previously be erroneously rounded to a single digit of precision, which leads to very broken labels in some graphs.
We also need to add these to the list of cases where we want more precision, similar to how doubles are already handled.

While doing that, add some tests for the existing cases and the new cases and slightly refactor the code to be more understandable.
(cherry picked from commit aa70fce4aab5bcf24b1c802b62c7208e20c7dfee)

M  +23   -0    autotests/formattertest.cpp
M  +7    -1    formatter/Formatter.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/78026f6dd65a29f2e6ac399ed5fa0d89bf5f17b6