Fix precision for doubles passed as strings

These would previously be erroneously rounded to a single digit of precision, which leads to very broken labels in some graphs.
We also need to add these to the list of cases where we want more precision, similar to how doubles are already handled.

While doing that, add some tests for the existing cases and the new cases and slightly refactor the code to be more understandable.

BUG: 521041
(cherry picked from commit aa70fce4aab5bcf24b1c802b62c7208e20c7dfee)